# transcricao_cursos

./: .env  .gitignore  README.md  pyproject.toml  report copy 2.md  report copy.md  report_ptBR.md  review_feedback.md
db/: chroma.sqlite3
src/transcricao_cursos/: crew copy.py  crew.py  main.py
src/transcricao_cursos/config/: agents.yaml  tasks.yaml  tasks____.yaml
src/transcricao_cursos/config/bkps/: agents - Copia - 28052024.yaml  agents - Copia 2405.yaml  agents - Copia 27052024.yaml  agents copy 2_otimizado GPT.yaml  agents copy.yaml  agents.yaml  crew.py  tasks - Copia 2405.yaml  tasks - Copia 27052024.yaml  tasks copy.yaml  tasks.yaml
src/transcricao_cursos/tools/: pdf_reader_tool.py
tests/: arq_txt.txt  report_ptBR.md  review_en.md
tests/bkp/: report_ptBR28.md  report_ptBR_27.md  report_ptBR_GPT3.md  report_ptBR_GPT4o.md  report_ptBR_LLMA_Artigo.md  review_en27.md  review_en28.md  review_en_GPT3.md  review_en_GPT4o.md  review_en_LLMA_Artigo.md
